# bex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release-bex-binary.yaml
bootstrap/: pyproject.toml
bootstrap/src/bex/bootstrap/: __init__.py  __main__.py  cli.py  config.py  shared.py  utils.py  uv.py
executors/bex-exec-hooks/: pyproject.toml
executors/bex-exec-hooks/src/bex/exec/: __init__.py  __main__.py  cli.py  executor.py  plugin.py
executors/bex-exec-hooks/src/bex_exec/hooks/: __init__.py  __main__.py  cli.py  executor.py  plugin.py  spec.py
hooks/bex-hooks-files/: pyproject.toml
hooks/bex-hooks-files/src/bex/hooks/files/: __init__.py  file.py  utils.py
hooks/bex-hooks-files/src/bex_hooks/files/: __init__.py  _interface.py  file.py  utils.py
hooks/bex-hooks-python/: pyproject.toml
hooks/bex-hooks-python/src/bex/hooks/python/: __init__.py  setup.py  utils.py
hooks/bex-hooks-python/src/bex_hooks/python/: __init__.py  setup.py  utils.py
release/: bex.spec  build.py
src/bex/: __init__.py  __main__.py  cli.py  config.py  errors.py  shared.py  utils.py  uv.py
